--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -15,15 +15,13 @@ jobs:
         id: get-latest-release
         run: |
           latest_tag=$(curl -s https://api.github.com/repos/spacelift-io/spacectl/tags \
-            | jq -r '.[0].name' | sed s/v//g )
-          echo $latest_tag >> .last_release
+            | jq -r '.[0].name' | sed s/v//g | tr -d '\n')
           echo "LATEST_TAG=$latest_tag" >> $GITHUB_ENV
           echo "$latest_tag" >> $GITHUB_OUTPUT
 
       - name: Get latest tag from another repo
         id: test
         run: echo "${{ steps.get-latest-release.outputs.output1 }}"
-
 
       - name: Restore last built release (cache)
         id: cache-last-release
