--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -17,11 +17,11 @@ jobs:
           latest_tag=$(curl -s https://api.github.com/repos/spacelift-io/spacectl/tags \
             | jq -r '.[0].name' | sed s/v//g | tr -d '\n')
           echo "LATEST_TAG=$latest_tag" >> $GITHUB_ENV
-          echo "$latest_tag" >> $GITHUB_OUTPUT
+          echo "latest_tag=$latest_tag" >> $GITHUB_OUTPUT
 
       - name: Get latest tag from another repo
         id: test
-        run: echo "${{ steps.get-latest-release.outputs.output1 }}"
+        run: echo "${{ steps.get-latest-release.outputs.latest_tag }}"
 
       - name: Restore last built release (cache)
         id: cache-last-release
