--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -7,8 +7,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-snap:
+  detect-version:
     runs-on: ubuntu-latest
+
+    outputs:
+      run_build: ${{ steps.get-latest-release.outputs.latest_tag }}
 
     steps:
       - name: Get latest tag from another repo
@@ -16,7 +19,6 @@ jobs:
         run: |
           latest_tag=$(curl -s https://api.github.com/repos/spacelift-io/spacectl/tags \
             | jq -r '.[0].name' | sed s/v//g | tr -d '\n')
-          echo "LATEST_TAG=$latest_tag" >> $GITHUB_ENV
           echo "latest_tag=$latest_tag" >> $GITHUB_OUTPUT
 
       - name: Restore last built release (cache)
@@ -42,30 +44,35 @@ jobs:
 
           if [ "$LATEST_TAG" = "$LAST_TAG" ]; then
             echo "No new release found. Exiting."
+            echo "run_build=false" >> $GITHUB_OUTPUT
             exit 0
+          elif
+            echo "run_build=true" >> $GITHUB_OUTPUT
           fi
 
           # Save the new tag so it gets cached at the end of the job
           echo $LATEST_TAG > .last_release
           echo "NEW_TAG=$LATEST_TAG" >> $GITHUB_ENV
 
+  build-snap:
+    runs-on: ubuntu-latest
+    needs: detect-version
+    if: ${{ needs.detect-version.outputs.run_build }} != 'false'
+    
+    steps:
       - name: Checkout current code
-        if: env.NEW_TAG != ''
         uses: actions/checkout@v5
 
       - name: Update Snap version dynamically
-        if: env.NEW_TAG != ''
         run: |
           sed -i "s/^version: .*/version: '${NEW_TAG}'/" snap/snapcraft.yaml
           cat snap/snapcraft.yaml
 
-#      - name: Build Snap
-#        if: env.NEW_TAG != ''
-#        uses: snapcore/action-build@v1
-#        id: build-snap
-#
+      - name: Build Snap
+        uses: snapcore/action-build@v1
+        id: build-snap
+
 #      - name: Publish Snap
-#        if: env.NEW_TAG != ''
 #        uses: snapcore/action-publish@v1
 #        env:
 #          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_STORE_LOGIN }}
