--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -46,7 +46,7 @@ jobs:
             echo "No new release found. Exiting."
             echo "run_build=false" >> $GITHUB_OUTPUT
             exit 0
-          elif
+          else
             echo "run_build=true" >> $GITHUB_OUTPUT
           fi
 
