--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -72,11 +72,11 @@ jobs:
         uses: snapcore/action-build@v1
         id: build-snap
 
-#      - name: Publish Snap
-#        uses: snapcore/action-publish@v1
-#        env:
-#          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_STORE_LOGIN }}
-#        with:
-#          snap: ${{ steps.build-snap.outputs.snap }}
-#          channel: stable
-#          release: env.NEW_TAG
+      - name: Publish Snap
+        uses: snapcore/action-publish@v1
+        env:
+          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_STORE_LOGIN }}
+        with:
+          snap: ${{ steps.build-snap.outputs.snap }}
+          channel: edge
+          release: env.NEW_TAG
