--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     outputs:
-      run_build: ${{ steps.get-latest-release.outputs.latest_tag }}
+      latest_tag: ${{ steps.get-latest-release.outputs.latest_tag }}
+      run_build: ${{ steps.check.outputs.run_build }}
 
     steps:
       - name: Get latest tag from another repo
@@ -57,7 +58,7 @@ jobs:
   build-snap:
     runs-on: ubuntu-latest
     needs: detect-version
-    if: ${{ needs.detect-version.outputs.run_build }} != 'false'
+    if: ${{ needs.detect-version.outputs.run_build }} == 'true'
     
     steps:
       - name: Checkout current code
@@ -65,7 +66,7 @@ jobs:
 
       - name: Update Snap version dynamically
         run: |
-          sed -i "s/^version: .*/version: ${{ needs.detect-version.outputs.run_build }}/" snap/snapcraft.yaml
+          sed -i "s/^version: .*/version: ${{ needs.detect-version.outputs.latest_tag }}/" snap/snapcraft.yaml
           cat snap/snapcraft.yaml
 
       - name: Build Snap
@@ -79,4 +80,4 @@ jobs:
         with:
           snap: ${{ steps.build-snap.outputs.snap }}
           channel: edge
-          release: env.NEW_TAG
+          release: ${{ needs.detect-version.outputs.latest_tag }}
