--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -55,6 +55,8 @@ jobs:
           echo $LATEST_TAG > .last_release
           echo "NEW_TAG=$LATEST_TAG" >> $GITHUB_ENV
 
+          echo $run_build
+
   build-snap:
     runs-on: ubuntu-latest
     needs: detect-version
