--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -53,9 +53,6 @@ jobs:
 
           # Save the new tag so it gets cached at the end of the job
           echo $LATEST_TAG > .last_release
-          echo "NEW_TAG=$LATEST_TAG" >> $GITHUB_ENV
-
-          echo $run_build
 
   build-snap:
     runs-on: ubuntu-latest
@@ -63,6 +60,9 @@ jobs:
     if: ${{ needs.detect-version.outputs.run_build }} == 'true'
     
     steps:
+      - name: test
+        run: |
+          echo "${{ needs.detect-version.outputs.run_build }}"
       - name: Checkout current code
         uses: actions/checkout@v5
 
