added network bind and test

--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -78,5 +78,4 @@ jobs:
           SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_STORE_LOGIN }}
         with:
           snap: ${{ steps.build-snap.outputs.snap }}
-          channel: edge
-          release: ${{ needs.detect-version.outputs.latest_tag }}
+          release: edge
