--- a/.github/workflows/build-snap.yml
+++ b/.github/workflows/build-snap.yml
@@ -57,7 +57,6 @@ jobs:
   build-snap:
     runs-on: ubuntu-latest
     needs: detect-version
-    if: ${{ needs.detect-version.outputs.run_build  == 'true' }}
     
     steps:
       - name: Checkout current code
@@ -75,10 +74,10 @@ jobs:
       - name: Test
         run: "${{ steps.build-snap.outputs.snap }}"
 
-      - name: Publish Snap
-        uses: snapcore/action-publish@v1
-        env:
-          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_STORE_LOGIN }}
-        with:
-          snap: ${{ steps.build-snap.outputs.snap }}
-          release: edge
+#      - name: Publish Snap
+#        uses: snapcore/action-publish@v1
+#        env:
+#          SNAPCRAFT_STORE_CREDENTIALS: ${{ secrets.SNAP_STORE_LOGIN }}
+#        with:
+#          snap: ${{ steps.build-snap.outputs.snap }}
+#          release: edge
